# qaas-assessment

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_command.sh
oper/: asgi.py  settings.py  urls.py
quiz/: admin.py  consumers.py  managers.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_quiz_question_invitation_choice_attempt_answer_and_more.py  0003_invitation_status.py  0004_quiz_description.py  0005_attempt_score.py
tests/: conftest.py
tests/quiz/: test_consumers.py  test_models.py  test_views.py
